--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link
+      type="image/png"
+      sizes="16x16"
+      rel="icon"
+      href="/icons8-gpa-calculator-ios-16-16.png"
+    />
+    <link
+      type="image/png"
+      sizes="32x32"
+      rel="icon"
+      href="/icons8-gpa-calculator-ios-16-32.png"
+    />
+    <link
+      type="image/png"
+      sizes="96x96"
+      rel="icon"
+      href="/icons8-gpa-calculator-ios-16-96.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gpa | App</title>
     <link
-    href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
-    rel="stylesheet"
-  />
+      href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
