--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/src/style.css" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8414334205797074"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
