--- a/index.html
+++ b/index.html
@@ -21,6 +21,31 @@
       href="/icons8-gpa-calculator-ios-16-96.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Calculate your GPA easily with our GPA calculator. Enter your grades and credits to get your GPA instantly."
+    />
+    <meta property="og:title" content="GPA | App" />
+    <meta
+      property="og:description"
+      content="Calculate your GPA easily with our GPA calculator. Enter your grades and credits to get your GPA instantly."
+    />
+    <meta property="og:url" content="https://gpagenie.netlify.app/" />
+    <meta property="og:image" content="/icons8-gpa-calculator-ios-16-96.png" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="https://gpagenie.netlify.app/" />
+    <meta name="twitter:title" content="GPA | App" />
+    <meta
+      name="twitter:description"
+      content="Calculate your GPA easily with our GPA calculator. Enter your grades and credits to get your GPA instantly."
+    />
+    <meta name="twitter:image" content="/icons8-gpa-calculator-ios-16-96.png" />
+
+    <meta
+      name="google-site-verification"
+      content="8AWuOsXQHgFjkSWkp3Fo_BveMtx9wBTjJe1Az7FRaoY"
+    />
     <title>Gpa | App</title>
     <link
       href="https://fonts.googleapis.com/css?family=McLaren|Montserrat&display=swap"
